fix: right nav gap too wide

--- a/frontend/src/components/Nav/Nav.module.scss
+++ b/frontend/src/components/Nav/Nav.module.scss
@@ -18,7 +18,7 @@
 .nav__right {
   display: flex;
   align-items: center;
-  gap: 0.5em;
+  gap: 0.2em;
 }
 
 .index,
